<resources>
    <string name="checkList">CheckList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">총횟수</string>
    <string name="time">시간</string>
    <string name="weight">양</string>
    <string name="date">날짜</string>
    <string name="serchbtn">검색</string>
    <string name="no">NO</string>
    <string name="save">저장</string>

</resources>